--- a/02. PARTIE REGLEMENTAIRE/Article R4432-13 - 27233917.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-13 - 27233917.md
@@ -1,18 +1,16 @@
 # Article R4432-13
 
-En cas de faute grave, il peut être mis fin aux fonctions du président et des autres membres du bureau par décret pris sur
-proposition du ministre chargé des transports.
+Le ministre chargé des transports peut, après avis du conseil d'administration, en cas de faute grave dans l'exercice des
+fonctions d'administrateur et par arrêté motivé pris après que l'intéressé a été mis à même de faire valoir ses observations,
+suspendre ou mettre fin aux fonctions d'un membre du conseil d'administration de la chambre, d'un membre du bureau ou du
+président.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 19 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 10
