--- a/02. PARTIE REGLEMENTAIRE/Article R4432-14 - 27233921.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-14 - 27233921.md
@@ -1,28 +1,29 @@
 # Article R4432-14
 
-Le président du conseil d'administration a autorité sur l'ensemble des personnels de l'établissement public.
+Le président du conseil d'administration est responsable de l'exécution des délibérations du conseil d'administration. 
 
-Il est ordonnateur des dépenses et des recettes.
+Il a autorité sur l'ensemble des personnels de l'établissement public. 
 
-Il représente l'établissement en justice et dans les actes de la vie civile.
+Il est ordonnateur des dépenses et des recettes. Le conseil d'administration définit à chaque début de mandat les seuils au-
+delà desquels le président doit demander l'accord du conseil d'administration avant d'engager les dépenses. 
 
-Il recrute, gère et licencie le personnel de l'établissement.
+Il représente l'établissement en justice et dans les actes de la vie civile. 
 
-Il signe les baux et conventions.
+Il recrute, gère et licencie le personnel de l'établissement. 
+
+Il signe tous les actes relatifs à la gestion de l'établissement. 
+
+Le président du conseil d'administration est également président du bureau. 
 
 Après accord du bureau, il peut déléguer une partie de ses attributions à un secrétaire général nommé par ses soins et placé
 sous son autorité.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 18 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 11
