--- a/02. PARTIE REGLEMENTAIRE/Article R4432-17 - 27233931.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-17 - 27233931.md
@@ -7,29 +7,22 @@ l'établissement ;
 
 2° Les subventions de l'Etat et d'autres personnes de droit public ; 
 
-3° Le produit des emprunts que l'établissement public est autorisé à contracter par décision conjointe du ministre chargé des
-transports et du ministre chargé de l'économie, des finances et du budget ; 
+3° Le produit de ventes de prestations de services ; 
 
-4° Le produit des rémunérations pour services rendus ; 
+4° Les revenus des biens et valeurs lui appartenant ; 
 
-5° Les revenus des biens et valeurs lui appartenant ; 
-
-6° Les dons et legs.
+5° Les dons et legs.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 21 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 16
 
 	**Cite**:
 
-	  - Code des transports - art. L4432-3 (V)
+	  - Code des transports - art. L4432-3
