--- a/02. PARTIE REGLEMENTAIRE/Article R4432-2 - 27233887.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-2 - 27233887.md
@@ -1,41 +1,77 @@
 # Article R4432-2
 
-Dans le cadre des missions générales conférées par l'article L. 4432-1, la Chambre nationale de la batellerie artisanale est
-chargée : 
+I.-En application de l'article L. 4432-1, la Chambre nationale de la batellerie artisanale est chargée : 
 
 1° D'émettre un avis sur les projets de loi ou de décret relatifs au transport fluvial ; elle est également saisie de toutes
-autres questions qui lui sont soumises par le ministre chargé des transports ; 
+autres questions relatives au transport fluvial qui lui sont soumises par le ministre chargé des transports ; son avis est
+réputé rendu à l'expiration d'un délai de deux mois à compter de la saisine par le ministre chargé des transports ; 
 
-2° De gérer tout fonds qui serait créé en vue de favoriser l'adaptation de la capacité de la flotte artisanale ; 
+2° De contribuer au développement de l'apprentissage et de concourir à l'organisation de la formation initiale et de la
+formation continue dans le domaine du transport fluvial ; 
 
-3° D'organiser ou de concourir à l'organisation de l'apprentissage et de la formation continue en vue de favoriser la
-promotion professionnelle des patrons et des compagnons bateliers ; 
+3° De désigner des membres de jury ou des examinateurs en vue de leur participation aux différents examens officiels donnant
+accès à la profession de transporteur fluvial ; 
 
-4° De coordonner l'action des entreprises de batellerie artisanale, notamment par la création de services communs destinés à
-améliorer la rentabilité, la qualité, les techniques et les méthodes de cette batellerie ; 
+4° De contribuer à la promotion du transport fluvial, tant au plan national qu'international notamment par l'organisation, le
+financement ou la participation à toute association ou à toute action de promotion ou de développement du secteur fluvial ; 
 
-5° De créer des institutions d'entraide et d'assistance ou de concourir à leur fonctionnement. 
+5° De coordonner l'action des entreprises de transport fluvial, notamment par la création de services communs destinés à
+améliorer la rentabilité, la qualité, les techniques et les pratiques professionnelles du secteur, si nécessaire par le biais
+de convention ou d'accord avec les autres réseaux de chambres consulaires ; 
 
-Elle peut, en outre, procéder à toutes études et émettre tous vœux sur des matières relevant de sa compétence, notamment sur
-les qualifications spécifiques aux métiers de la batellerie.
+6° De gérer ou d'apporter une contribution financière à tout fonds qui serait créé en vue de favoriser la
+professionnalisation des métiers du fluvial et la modernisation de la flotte ainsi que l'adaptation de la capacité de la
+flotte ; 
+
+7° De conseiller, d'informer et d'assister les entreprises du secteur fluvial ainsi que les créateurs d'entreprises de
+batellerie ; 
+
+8° De contribuer à la prévention et au traitement des difficultés des entreprises, en liaison avec les services de l'Etat,
+les organismes de recouvrement des cotisations sociales et toutes personnes morales, publiques ou privées, concernées ; 
+
+9° De verser des aides de secours et de créer des institutions d'entraide et d'assistance ou de concourir à leur
+fonctionnement. 
+
+II.-La Chambre nationale de la batellerie artisanale : 
+
+1° Peut faire réaliser ou participer à toutes études et émettre toute proposition sur des matières relevant de sa
+compétence ; 
+
+2° Elabore, dans les six mois suivant chaque renouvellement de son conseil d'administration, un projet stratégique qui, pour
+une durée de cinq ans, détermine :
+
+- le positionnement stratégique et la politique de développement de l'établissement ;
+
+- l'organisation de l'établissement pour exercer ses missions et mettre en œuvre sa politique de développement ;
+
+- les moyens prévisionnels dont dispose l'établissement pour réaliser ses objectifs ;
+
+- les indicateurs permettant de mesurer l'atteinte de ces objectifs. 
+
+Ce projet stratégique est transmis pour approbation au ministre chargé des transports ; 
+
+3° Elle élabore chaque année un rapport d'activité qu'elle transmet au ministre chargé des transports. Ce rapport d'activité
+fait notamment le bilan annuel de réalisation des objectifs fixés dans le projet stratégique de l'établissement. 
+
+III.-Elle peut être autorisée par le ministre chargé des transports à participer à des syndicats mixtes créés en application
+des articles L. 5721-1 et suivants du code général des collectivités territoriales relevant de son domaine de compétence. 
+
+IV.-Elle peut participer à une instance de médiation sur demande commune expresse des parties au litige.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L4432-1 (V)
+	  - Code général des collectivités territoriales - art. L5721-1
+	  - Code des transports - art. L4432-1
 
 	**Cité par**:
 
