--- a/02. PARTIE REGLEMENTAIRE/Article R4432-3 - 27233895.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-3 - 27233895.md
@@ -1,31 +1,41 @@
 # Article R4432-3
 
-Le conseil d'administration de la Chambre nationale de la batellerie artisanale comprend : 
+Le conseil d'administration de la Chambre nationale de la batellerie artisanale comprend au maximum vingt-quatre membres et
+est composé de deux collèges : 
 
-1° Vingt-deux membres, dont quatre exploitant un ou plusieurs bateaux dont le port en lourd est supérieur à 500 tonnes, élus
-pour six ans par les patrons et compagnons bateliers non salariés inscrits au registre prévu à l'article R. 4431-2. Ils sont
-renouvelés par moitié tous les trois ans ; 
+1° Vingt-deux membres élus par les patrons bateliers inscrits au registre dans les conditions prévues au 1° de l'article R.
+4431-2 ; 
 
-2° Un membre élu pour trois ans par les compagnons bateliers salariés inscrits dans la section particulière du registre
-prévue à l'article R. 4431-2 relative aux compagnons bateliers salariés. Ce nombre est porté à deux lorsque la proportion des
-compagnons bateliers salariés dépasse 10 % du nombre total des patrons et des compagnons bateliers salariés et non salariés. 
+2° Un membre élu par les compagnons bateliers inscrits au registre dans les conditions prévues au 2° de l'article R. 4431-2.
+Ce nombre est porté à deux lorsque la proportion des compagnons bateliers dépasse 10 % du nombre total des patrons tels que
+définis au 1° de l'article R. 4431-2 et des compagnons bateliers.
 
-Le mandat des membres du conseil d'administration est renouvelable.
+**Nota:**
+
+Aux termes de l'article 19 du décret n° 2015-873 du 16 juillet 2015, ces dispositions s'appliquent à l'organisation des
+premières élections pour le renouvellement du conseil d'administration de la Chambre nationale de la batellerie artisanale,
+qui suivront la publication du présent décret.
+
+Le renouvellement total des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale, selon
+les nouvelles modalités prévues aux articles 4 et 5, aura lieu à une date qui sera fixée par arrêté du ministre chargé des
+transports et au plus tard six mois à compter du lendemain de la date de publication du présent décret.
+
+La durée du mandat des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale est prorogée
+jusqu'à la date d'installation des membres qui seront proclamés élus à l'issue de cette élection.
+
+Tous les mandats en cours des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale
+prendront fin à la date d'installation des membres qui seront proclamés élus à l'issue de cette élection.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 6 alinéas 1 à 4 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 4
 
 	**Cite**:
 
-	  - Code des transports - art. R4431-2 (V)
+	  - Code des transports - art. R4431-2
