--- a/02. PARTIE REGLEMENTAIRE/Article R4432-4 - 27233897.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-4 - 27233897.md
@@ -1,54 +1,77 @@
 # Article R4432-4
 
-Les membres du conseil d'administration sont élus au scrutin plurinominal direct à un tour selon les modalités suivantes : 
+I.-Les membres du conseil d'administration sont élus pour cinq ans au scrutin plurinominal direct à un tour. 
 
-1° En ce qui concerne les membres élus par les patrons et les compagnons bateliers non salariés : 
+Lorsque les circonstances l'exigent, ce mandat peut être prorogé pour une durée n'excédant pas six mois par arrêté du
+ministre chargé des transports. 
 
-Peuvent seuls être candidats les patrons ou les compagnons bateliers non salariés inscrits au registre prévu à l'article R.
-4431-2. 
+1° En ce qui concerne les membres élus par les patrons bateliers : 
 
-L'ensemble des candidats est porté sur deux listes distinctes dont l'une comprend ceux qui exploitent un ou plusieurs bateaux
-dont le port en lourd est supérieur à 500 tonnes. Ces listes sont établies par ordre alphabétique. Leur publicité est assurée
-dans les conditions fixées par l'arrêté prévu au dernier alinéa. 
+Sont éligibles les personnes inscrites au registre et ayant la qualité de patrons bateliers tels que définis au 1° de
+l'article R. 4431-2 ; 
 
-Chaque électeur choisit, au plus, quatre candidats sur la liste de ceux exploitant un ou plusieurs bateaux de plus de 500
-tonnes et, au plus, dix-huit candidats sur l'autre liste. 
+2° En ce qui concerne le ou les membres élus par les compagnons bateliers : 
 
-Sont proclamés élus : 
+Sont éligibles les compagnons bateliers inscrits au registre, tels que définis au 2° de l'article R. 4431-2. 
 
-a) Sur la première liste, les quatre candidats ayant obtenu le plus de voix ; 
+Ne peut être élue une personne âgée de soixante-cinq ans révolus le 1er janvier de l'année d'établissement des listes
+électorales. Lorsqu'un membre atteint cet âge en cours de mandat, il le poursuit jusqu'au renouvellement suivant. 
 
-b) Sur la seconde, les dix-huit candidats ayant obtenu le plus de voix. 
+Les listes de chaque collège sont établies par ordre alphabétique. 
 
 Si deux ou plusieurs candidats de la même liste obtiennent le même nombre de voix, le ou les plus jeunes sont proclamés
-élus ; 
+élus. 
 
-2° En ce qui concerne le ou les membres élus par les compagnons bateliers salariés : 
+Les candidats qui ne sont pas élus sont inscrits sur deux listes complémentaires selon leur catégorie. Ils sont classés par
+ordre décroissant en fonction du nombre de suffrages obtenus. Si deux ou plusieurs candidats obtiennent le même nombre de
+voix, ils sont classés par ordre croissant en fonction de leur âge. 
 
-Peuvent seuls être candidats les compagnons bateliers salariés inscrits au registre prévu à l'article R. 4431-2. 
+Les deux listes complémentaires ne sont valables que jusqu'au scrutin suivant. 
 
-Le vote par correspondance est autorisé. 
+Le vote est réalisé exclusivement par correspondance. 
 
-Un arrêté du ministre chargé des transports fixe les modalités d'organisation du scrutin.
+Un arrêté du ministre chargé des transports fixe les modalités d'organisation du scrutin. 
+
+II.-Les membres sortants siègent jusqu'à la première réunion du conseil d'administration qui suit les élections. A compter de
+la proclamation des résultats, le conseil d'administration sortant ne peut toutefois se réunir que pour procéder à des actes
+conservatoires et urgents. 
+
+III.-La première réunion du conseil d'administration a lieu soixante jours au plus tard après la proclamation des résultats
+des élections, sur convocation du président sortant ou, à défaut, du ministre chargé des transports. 
+
+Dès la première réunion du conseil d'administration, il est procédé à l'élection du président et des membres du bureau prévu
+à l'article R. 4432-14-1.
+
+**Nota:**
+
+Aux termes de l'article 19 du décret n° 2015-873 du 16 juillet 2015, ces dispositions s'appliquent à l'organisation des
+premières élections pour le renouvellement du conseil d'administration de la Chambre nationale de la batellerie artisanale,
+qui suivront la publication du présent décret.
+
+Le renouvellement total des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale, selon
+les nouvelles modalités prévues aux articles 4 et 5, aura lieu à une date qui sera fixée par arrêté du ministre chargé des
+transports et au plus tard six mois à compter du lendemain de la date de publication du présent décret.
+
+La durée du mandat des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale est prorogée
+jusqu'à la date d'installation des membres qui seront proclamés élus à l'issue de cette élection.
+
+Tous les mandats en cours des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale
+prendront fin à la date d'installation des membres qui seront proclamés élus à l'issue de cette élection.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 7 (Ab)
-	  - Décret n°84-365 du 14 mai 1984 - art. 8 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 5
 
 	**Cite**:
 
-	  - Code des transports - art. R4431-2 (V)
+	  - Code des transports - art. R4431-2
+	  - Code des transports - art. R4432-14-1 (V)
 
 	**Cité par**:
 
