--- a/02. PARTIE REGLEMENTAIRE/Article R4432-5 - 27233899.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-5 - 27233899.md
@@ -1,27 +1,50 @@
 # Article R4432-5
 
-Il est pourvu au remplacement des membres décédés ou démissionnaires lors du prochain renouvellement.
+Les membres du conseil d'administration assistent au conseil d'administration et prennent part au vote des délibérations.
+Tout membre empêché d'assister à une séance peut donner à un administrateur de son choix un mandat écrit lui permettant de
+voter en son nom. Nul ne peut être porteur de plus de deux mandats. 
 
-Toutefois, lorsque le conseil d'administration est réduit à moins de dix-sept membres par l'effet de vacances survenues pour
-une cause quelconque, il est procédé à des élections complémentaires dans le délai de deux mois à compter de la vacance qui a
-eu pour effet de faire descendre le nombre des membres au-dessous de dix-sept.
+Les membres décédés, démissionnaires ou déclarés démissionnaires d'office sont remplacés d'office par les candidats inscrits
+sur les listes complémentaires mentionnées à l'article R. 4432-4, selon leur catégorie et dans leur ordre de classement. 
 
-Dans l'année qui précède un renouvellement partiel, les élections complémentaires sont reportées à la date de ce
-renouvellement.
+La démission d'un membre du conseil d'administration est adressée au ministre chargé des transports par lettre recommandée
+avec accusé de réception ou tout autre moyen permettant d'attester la réception par son destinataire. 
+
+Sont déclarés démissionnaires d'office par le ministre chargé des transports, après avis du conseil d'administration : 
+
+1° Les administrateurs qui se sont abstenus sans motifs légitimes de se rendre à deux séances consécutives du conseil
+d'administration, auxquelles ils étaient régulièrement convoqués, et qui n'ont pas donné de mandat ; 
+
+2° Les administrateurs qui cessent, au cours de leur mandat, de répondre aux conditions d'éligibilité mentionnées à l'article
+R. 4432-4. Les membres qui changent de catégorie siègent jusqu'à la fin du mandat dans la catégorie au titre de laquelle ils
+ont été élus. 
+
+Le président du conseil d'administration informe par lettre recommandée avec accusé de réception ou tout autre moyen
+permettant d'attester la réception par son destinataire :
+
+- d'une part, les administrateurs déclarés démissionnaires d'office ;
+
+- d'autre part, les administrateurs nommés pour remplacer un administrateur sortant. 
+
+Lorsque le conseil d'administration est réduit à moins de dix-sept membres par l'effet de vacances survenues pour une cause
+quelconque, il est procédé à des élections complémentaires dans le délai de deux mois à compter de la vacance qui a eu pour
+effet de faire descendre le nombre des membres au-dessous de dix-sept. 
+
+Dans l'année qui précède un renouvellement, les élections complémentaires sont reportées à la date de ce renouvellement. 
 
 Les membres élus à la faveur des dispositions susmentionnées ne demeurent en fonctions que jusqu'à l'expiration de la durée
-du mandat confié à leurs prédécesseurs.
+du mandat restant à courir.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 9 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 6
+
+	**Cite**:
+
+	  - Code des transports - art. R4432-4
