--- a/02. PARTIE REGLEMENTAIRE/Article R4432-6 - 27233901.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-6 - 27233901.md
@@ -2,19 +2,35 @@
 
 Le ministre chargé des transports détermine par arrêté les organisations syndicales les plus représentatives de la profession
 appelées à désigner chacune auprès du conseil d'administration et pour une durée de trois ans un représentant qui siège avec
-voix consultative. Le nombre de ces représentants ne peut être supérieur à dix. Ils sont remplacés dans les mêmes conditions
+voix consultative. Le nombre de ces représentants ne peut être supérieur à cinq. Ils sont remplacés dans les mêmes conditions
 lorsqu'ils perdent la qualité au titre de laquelle ils ont été désignés.
 
+Le président du conseil d'administration, sauf opposition du commissaire du Gouvernement, ainsi que le commissaire du
+Gouvernement, peut inviter à une séance en qualité de rapporteur, d'expert ou de conseiller toute personne extérieure qu'il
+estime compétente pour éclairer les débats relatifs à une question donnée. Cette personne n'assiste à la séance que pour la
+partie qui la concerne, à titre consultatif.
+
+**Nota:**
+
+Aux termes de l'article 19 du décret n° 2015-873 du 16 juillet 2015, ces dispositions s'appliquent à compter du premier
+renouvellement total des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale.
+
+Le renouvellement total des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale, selon
+les nouvelles modalités prévues aux articles 4 et 5, aura lieu à une date qui sera fixée par arrêté du ministre chargé des
+transports et au plus tard six mois à compter du lendemain de la date de publication du présent décret.
+
+La durée du mandat des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale est prorogée
+jusqu'à la date d'installation des membres qui seront proclamés élus à l'issue de cette élection.
+
+Tous les mandats en cours des membres du conseil d'administration de la Chambre nationale de la batellerie artisanale
+prendront fin à la date d'installation des membres qui seront proclamés élus à l'issue de cette élection.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 10 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 7
