--- a/02. PARTIE REGLEMENTAIRE/Article R4432-7 - 27233905.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-7 - 27233905.md
@@ -1,23 +1,25 @@
 # Article R4432-7
 
-Le conseil d'administration élit en son sein un bureau qui comprend au moins un président, un trésorier et un secrétaire. Les
-membres du bureau sont élus au vote secret par un scrutin distinct pour chaque poste. L'élection a lieu à la majorité absolue
-des suffrages exprimés au premier tour et, le cas échéant, au second tour. S'il y a lieu de procéder à un troisième tour, la
-majorité relative suffit.
+Le conseil d'administration règle par ses délibérations les affaires de la Chambre nationale de la batellerie artisanale,
+dans le cadre des missions énumérées aux articles L. 4432-1 et R. 4432-2. 
 
-Le conseil d'administration établit, sur proposition du bureau, son règlement intérieur, qui est transmis, pour approbation,
-au ministre chargé des transports.
+Il peut déléguer une partie de ses attributions à son président. 
+
+Le conseil d'administration établit, sur proposition du bureau, son règlement intérieur qui détermine notamment les modalités
+de publication des décisions de l'établissement public. Ce règlement intérieur est transmis, pour approbation, au ministre
+chargé des transports.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 11 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 8
+
+	**Cite**:
+
+	  - Code des transports - art. L4432-1
+	  - Code des transports - art. R4432-2
