--- a/02. PARTIE REGLEMENTAIRE/Article R4431-2 - 27233877.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4431-2 - 27233877.md
@@ -1,39 +1,31 @@
 # Article R4431-2
 
-Sont inscrites au registre des patrons et compagnons bateliers : 
+Sont inscrits au registre des patrons et compagnons bateliers : 
 
 1° En qualité de patron batelier, les personnes mentionnées à l'article L. 4430-3 ; 
 
-2° En qualité de compagnon batelier, les personnes autres que celles mentionnées au 1° travaillant dans les entreprises de
-batellerie artisanale et possédant une qualification professionnelle justifiée soit par la possession du certificat de
-compagnon, soit par un apprentissage préalable, soit par l'exercice prolongé du métier. Les compagnons bateliers salariés
-sont inscrits à une section particulière du registre. 
+Le conjoint du patron batelier ou la personne qui lui est liée par un PACS qui, conformément à l'article L. 121-4 du code de
+commerce, a opté pour le statut de conjoint collaborateur ou de conjoint associé, est inscrit au registre dans les mêmes
+conditions que le patron batelier ; 
 
-Le conjoint d'un patron batelier qui apporte une collaboration effective habituelle et sans rémunération au fonctionnement de
-l'entreprise et n'exerce aucune autre profession est inscrit au registre en qualité de patron batelier dans les mêmes
-conditions que le chef d'entreprise. 
-
-Le conjoint collaborateur remplissant les conditions fixées par l'article R. 121-1 du code de commerce fait l'objet d'une
-mention au registre.
+2° En qualité de compagnon batelier, les personnes autres que celles mentionnées au 1° travaillant, à titre salarié ou non,
+dans les entreprises de batellerie artisanale et possédant une qualification professionnelle justifiée soit par la possession
+du certificat de compagnon, soit par un apprentissage préalable, soit par l'exercice prolongé du métier.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 4 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 2
 
 	**Cite**:
 
-	  - Code de commerce - art. R121-1 (V)
-	  - Code des transports - art. L4430-3 (V)
+	  - Code de commerce - art. L121-4
+	  - Code des transports - art. L4430-3
 
 	**Cité par**:
 
