--- a/02. PARTIE REGLEMENTAIRE/Article R4432-10 - 27233911.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-10 - 27233911.md
@@ -1,31 +1,25 @@
 # Article R4432-10
 
-Le conseil d'administration délibère sur les missions énumérées aux articles L. 4432-1 et R. 4432-2. Il peut déléguer une
-partie de ses attributions à son président. 
+Le conseil d'administration ne peut valablement délibérer que lorsque la moitié au moins de ses membres en exercice sont
+présents ou représentés. Si le quorum n'est pas atteint, les membres sont convoqués, dans le mois qui suit, avec le même
+ordre du jour pour une nouvelle réunion au cours de laquelle le conseil peut délibérer, quel que soit le nombre des membres
+présents.
 
-Il ne peut valablement délibérer que lorsque la moitié au moins de ses membres en exercice sont présents. Si cette condition
-n'est pas remplie, les membres sont convoqués pour une nouvelle réunion au cours de laquelle le conseil peut délibérer quel
-que soit le nombre des membres présents. 
+Les membres du conseil peuvent participer à la séance par des moyens de visioconférence ou de communication électronique
+permettant leur identification et leur participation effective à une délibération collégiale, dans des conditions précisées
+par le règlement intérieur.
 
 Les délibérations sont prises à la majorité absolue des votants. En cas de partage égal, la voix du président est
-prépondérante. 
+prépondérante.
 
 Les procès-verbaux sont signés par le président et par le secrétaire. Ils font mention des personnes présentes.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 14 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
-
-	**Cite**:
-
-	  - Code des transports - art. L4432-1 (V)
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 9
