--- a/02. PARTIE REGLEMENTAIRE/Article R4432-18 - 27233935.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R4432-18 - 27233935.md
@@ -1,22 +1,20 @@
 # Article R4432-18
 
-Un commissaire du Gouvernement est nommé par arrêté du ministre chargé des transports.
+Un commissaire du Gouvernement et un commissaire du Gouvernement adjoint sont nommés par arrêté du ministre chargé des
+transports. En cas d'absence ou d'empêchement du commissaire du Gouvernement, ses pouvoirs sont exercés par le commissaire du
+Gouvernement adjoint. 
 
-Il peut faire opposition à toute délibération du conseil d'administration dans un délai de dix jours à compter du jour où il
-en a reçu notification. L'opposition est levée de plein droit si elle n'est pas confirmée par le ministre chargé des
-transports dans un délai d'un mois à compter du jour où le président du conseil d'administration a reçu notification de cette
-opposition.
+Le commissaire du Gouvernement  peut faire opposition à toute délibération du conseil d'administration dans un délai de dix
+jours à compter du jour où il en a reçu notification. L'opposition est levée de plein droit si elle n'est pas confirmée par
+le ministre chargé des transports dans un délai d'un mois à compter du jour où le président du conseil d'administration a
+reçu notification de cette opposition.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°84-365 du 14 mai 1984 - art. 15 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2013-253 du 25 mars 2013
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2013-253 du 25 mars 2013 - art.
+	  - Décret n°2015-873 du 16 juillet 2015 - art. 17
