--- a/01. PARTIE LEGISLATIVE/Article L6361-1 - 23078011.md
+++ b/01. PARTIE LEGISLATIVE/Article L6361-1 - 23078011.md
@@ -31,6 +31,9 @@ Le mandat des membres de l'Autorité est de six ans. Il n'est pas révocable.
 
 Pour assurer un renouvellement par moitié de l'autorité, cinq membres sont nommés tous les trois ans.
 
+Les membres mentionnés au 1° et au 3° comprennent un nombre égal de femmes et d'hommes. Pour le renouvellement des membres
+mentionnés au 2°, le membre succédant à une femme est un homme et celui succédant à un homme est une femme.  
+
 Sauf démission, il ne peut être mis fin aux fonctions de membre qu'en cas d'empêchement constaté par l'autorité dans les
 conditions qu'elle définit.
 
@@ -38,19 +41,19 @@ Tout membre exerçant une activité ou détenant un mandat, un emploi ou des int
 démissionnaire d'office, après consultation de l'autorité, selon les formes requises pour sa nomination.
 
 Si, en cours de mandat, le président ou un membre de l'autorité cesse d'exercer ses fonctions, le mandat de son successeur
-est limité à la période restant à courir. Ce successeur est nommé dans un délai de deux mois.
+est limité à la période restant à courir. Ce successeur du même sexe  est nommé dans un délai de deux mois.
 
-Le mandat des membres de l'autorité n'est pas renouvelable. Toutefois, cette règle n'est pas applicable aux membres dont le
-mandat, en application de l'alinéa ci-dessus, n'a pas excédé deux ans.
+Le mandat des membres de l'autorité n'est pas renouvelable. Toutefois, sous réserve du quinzième alinéa, cette règle n'est
+pas applicable aux membres dont le mandat, en application de l'alinéa ci-dessus, n'a pas excédé deux ans.
 
 Les fonctions de président sont rémunérées et les fonctions de membre de l'autorité sont indemnisées dans des conditions
 fixées par décret.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L227-1 (VT), alinéas 1 à 17 et 19, composition de l'ACNUSA
+	  - ORDONNANCE n°2015-948 du 31 juillet 2015 - art. 2
 
 	**Cité par**:
 
