--- a/01. PARTIE LEGISLATIVE/Article L2132-7 - 23084505.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-7 - 23084505.md
@@ -4,12 +4,15 @@ Les deux vice-présidents sont désignés, respectivement, par le président de 
 
 Le collège comprend au moins un membre nommé en raison de ses compétences économiques, un membre nommé en raison de ses
 compétences juridiques et un membre nommé en raison de ses compétences techniques dans le domaine ferroviaire ou pour son
-expertise en matière de concurrence, notamment dans le domaine des industries de réseau. La composition du collège assure une
-représentation équilibrée entre les femmes et les hommes. 
+expertise en matière de concurrence, notamment dans le domaine des industries de réseau. 
 
-En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement pour la durée du mandat restant à
-courir. Un mandat exercé pendant moins de deux ans n'est pas pris en compte pour l'application de la règle de non-
-renouvellement.
+Les membres autres que le président et les vice-présidents comprennent un nombre égal de femmes et d'hommes. Pour le
+renouvellement des vice-présidents, le membre succédant à une femme est un homme et celui succédant à un homme est une
+femme.  
+
+En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement par une personne de même sexe  pour la
+durée du mandat restant à courir. Sous réserve de l'alinéa précédent, un mandat  exercé pendant moins de deux ans n'est pas
+pris en compte pour l'application de la règle de non-renouvellement.
 
 **Liens relatifs à cet article**
 
@@ -19,7 +22,8 @@ renouvellement.
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
+	  - ORDONNANCE n°2015-948 du 31 juillet 2015 - art. 5
 
 	**Cité par**:
 
