--- a/01. PARTIE LEGISLATIVE/Article L2132-8-2 - 29332690.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-8-2 - 29332690.md
@@ -17,16 +17,19 @@ La durée du mandat des membres de la commission des sanctions est de six ans no
 la date de la première réunion de la commission. A l'expiration de la durée de six ans, les membres restent en fonctions
 jusqu'à la première réunion de la commission des sanctions dans sa nouvelle composition. 
 
-En cas de vacance d'un siège d'un membre de la commission des sanctions, il est procédé à son remplacement pour la durée du
-mandat restant à courir. Un mandat exercé pendant moins de deux ans n'est pas pris en compte pour l'application de la règle
-de non-renouvellement mentionnée à la première phrase de l'avant-dernier alinéa.
+L'écart entre le nombre de femmes et le nombre d'hommes parmi les membres de la commission des sanctions ne peut être
+supérieur à un. Lors de chaque renouvellement, le membre succédant à une femme est un homme et celui succédant à un homme est
+une femme. 
+
+En cas de vacance d'un siège d'un membre de la commission des sanctions, il est procédé à son remplacement  par une personne
+de même sexe  pour la durée du mandat restant à courir.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 13 (V)
+	  - ORDONNANCE n°2015-948 du 31 juillet 2015 - art. 5
 
 	**Cite**:
 
-	  - Code des transports - art. L2132-1 (VD)
+	  - Code des transports - art. L2132-1
