--- a/02. PARTIE REGLEMENTAIRE/Article R5352-5 - 30031932.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5352-5 - 30031932.md
@@ -6,11 +6,11 @@ sur l'engagement de respecter les consignes d'exploitation et les prescriptions 
 mettre en oeuvre une organisation et d'affecter à l'exploitation des personnels et des matériels permettant une exploitation
 sûre des services envisagés. 
 
-Lorsque l'autorité portuaire n'est pas le demandeur, elle transmet le dossier de demande d'agrément avec son avis à
-l'Etablissement public de sécurité ferroviaire dans un délai de quatre mois suivant la réception de la demande. L'agrément
-est accordé sur avis conforme de l'Etablissement public de sécurité ferroviaire au vu de l'engagement pris en la matière par
-le demandeur. L'avis est réputé conforme en l'absence de réponse dans les deux mois suivant la réception du dossier par
-l'Etablissement public de sécurité ferroviaire. 
+Lorsque l'autorité portuaire n'est pas le demandeur, elle transmet      les éléments du dossier de demande d'agrément
+relatifs à la sécurité avec son avis à l'Etablissement public de sécurité ferroviaire dans un délai de quatre mois suivant la
+réception de la demande. L'agrément est accordé sur avis conforme de l'Etablissement public de sécurité ferroviaire au vu de
+l'engagement pris en la matière par le demandeur. L'avis est réputé conforme en l'absence de réponse dans les deux mois
+suivant la réception du dossier par l'Etablissement public de sécurité ferroviaire. 
 
 L'agrément vaut certificat de sécurité pour les services empruntant les voies de service et d'embranchement du réseau ferré
 national en continuité de ces voies ferrées portuaires dans les conditions prévues au titre III du décret n° 2006-1279 du 19
@@ -22,14 +22,10 @@ Un arrêté du ministre chargé des transports précise les modalités d'applica
 
 	**Cite**:
 
-	  - Décret n°2006-1279 du 19 octobre 2006 -  TITRE III : LA SÉCURITÉ DES CIRCULATIONS SUR LE... (V)
-	  - Code des transports - art. L5352-3 (V)
+	  - Décret n°2006-1279 du 19 octobre 2006
+	  - Code des transports - art. L5352-3
 
 	**Codifié par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
@@ -39,6 +35,6 @@ Un arrêté du ministre chargé des transports précise les modalités d'applica
 	  - Code des transports - art. R5723-4 (V)
 	  - Code des transports - art. R5753-13 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. R411-8 (Ab)
+	  - Décret n°2015-960 du 31 juillet 2015 - art. 2
