--- a/01. PARTIE LEGISLATIVE/Article L1112-2-1 - 29507763.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-2-1 - 29507763.md
@@ -1,6 +1,6 @@
 # Article L1112-2-1
 
-I.-Il peut être élaboré un schéma directeur d'accessibilité-agenda d'accessibilité programmée. Cet agenda comporte une
+I. - Il peut être élaboré un schéma directeur d'accessibilité-agenda d'accessibilité programmée. Cet agenda comporte une
 analyse des actions nécessaires à la mise en accessibilité de ce service et prévoit les modalités et la programmation de la
 réalisation de ces actions ainsi que le financement correspondant. Il précise les points d'arrêt identifiés comme
 prioritaires, les dérogations sollicitées en cas d'impossibilité technique avérée mentionnée à l'article L. 1112-4 et les
@@ -29,7 +29,7 @@ organisatrice de transport ou, en l'absence d'une telle autorité, l'Etat, le ca
 d'accessibilité prévu à l'article L. 1112-2 s'il existe. Il se substitue alors à ce schéma directeur d'accessibilité des
 services de transport. 
 
-II.-Dans le cas où la mise en accessibilité d'un service de transport nécessite le concours de plusieurs personnes morales,
+II. - Dans le cas où la mise en accessibilité d'un service de transport nécessite le concours de plusieurs personnes morales,
 le schéma directeur précise les engagements de chacune de ces personnes en ce qui concerne le service de transport et
 l'infrastructure. 
 
@@ -46,13 +46,13 @@ file.
 Le schéma directeur d'accessibilité-agenda d'accessibilité programmée comporte les engagements, notamment financiers, de
 toutes les personnes morales contribuant à sa réalisation ou à son financement. Il est signé par ces personnes. 
 
-III.-Dans un délai de cinq mois après son dépôt, le représentant de l'Etat dans le département se prononce, après avis de la
-commission départementale consultative de la protection civile, de la sécurité et de l'accessibilité, sur la validation du
-schéma directeur d'accessibilité-agenda d'accessibilité programmée ne concernant pas les services de transport ferroviaire
-d'intérêt national. Lorsqu'un schéma directeur d'accessibilité-agenda d'accessibilité programmée concerne un réseau de
-transport public local desservant plusieurs départements, la décision de validation relative aux éléments prévus à l'avant-
-dernier alinéa du I de l'article L. 1112-2-1 est prise par le représentant du département dans lequel est implanté le siège
-de l'autorité organisatrice des transports qui a déposé la demande. 
+III. - Dans un délai de cinq mois après son dépôt, le représentant de l'Etat dans le département se prononce, après avis
+conforme  de la commission départementale consultative de la protection civile, de la sécurité et de l'accessibilité, sur la
+validation du schéma directeur d'accessibilité-agenda d'accessibilité programmée ne concernant pas les services de transport
+ferroviaire d'intérêt national. Lorsqu'un schéma directeur d'accessibilité-agenda d'accessibilité programmée concerne un
+réseau de transport public local desservant plusieurs départements, la décision de validation relative aux éléments prévus à
+l'avant-dernier alinéa du I de l'article L. 1112-2-1 est prise par le représentant du département dans lequel est implanté le
+siège de l'autorité organisatrice des transports qui a déposé la demande. 
 
 Le schéma directeur d'accessibilité-agenda d'accessibilité programmée relatif aux services ferroviaires d'intérêt national
 est soumis à la validation du ministre chargé des transports qui rend sa décision, après avis des commissions départementales
@@ -61,8 +61,10 @@ consultatives de la protection civile, de la sécurité et de l'accessibilité c
 Le schéma directeur d'accessibilité-agenda d'accessibilité programmée doit être déposé dans les douze mois suivant la
 publication de l'ordonnance n° 2014-1090 du 26 septembre 2014. 
 
-Ce délai peut être prorogé pour une durée maximale de trois ans dans le cas où les difficultés techniques ou financières
-liées à l'élaboration ou à la programmation du schéma l'imposent ou dans le cas d'un rejet d'un premier schéma.
+L'autorité administrative compétente peut autoriser, par décision motivée, la prorogation de ce délai pour une durée maximale
+de trois ans dans le cas où les difficultés financières liées à l'évaluation ou à la programmation du schéma le justifient,
+de douze mois dans le cas où les difficultés techniques liées à l'évaluation ou à la programmation du schéma le justifient ou
+de six mois en cas de rejet d'un premier agenda.
 
 **Liens relatifs à cet article**
 
@@ -84,11 +86,11 @@ liées à l'élaboration ou à la programmation du schéma l'imposent ou dans le
 	**Cite**:
 
 	  - ORDONNANCE n°2014-1090 du 26 septembre 2014
-	  - Code de la construction et de l'habitation. - art. L111-7-3
+	  - Code de la construction et de l'habitation. - art. L111-7-3 (V)
 	  - Code des transports - art. L1112-1
 	  - Code des transports - art. L1112-2
 	  - Code des transports - art. L1112-4
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 7
+	  - Loi n°2015-988 du 5 août 2015 - art. 5
