--- a/01. PARTIE LEGISLATIVE/Article L1112-2-3 - 29507767.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-2-3 - 29507767.md
@@ -5,14 +5,15 @@ programmée peut être demandée et prononcée par décision expresse de l'autor
 délais prévus par le schéma directeur d'accessibilité-agenda d'accessibilité programmée pour une durée maximale de trois ans,
 renouvelable si les circonstances de force majeure font obstacle à l'achèvement du schéma dans ce délai.
 
-En cas de difficultés techniques ou financières graves ou imprévues, l'autorité administrative peut autoriser une prorogation
-de la durée du schéma directeur d'accessibilité-agenda d'accessibilité programmée pour une durée maximale de douze mois.
+En cas de difficultés techniques ou financières graves ou imprévues, l'autorité administrative peut prononcer par décision
+expresse la  prorogation de la durée du schéma directeur d'accessibilité-agenda d'accessibilité programmée pour une durée
+maximale de douze mois.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 7
+	  - Loi n°2015-988 du 5 août 2015 - art. 5
 
 	**Cité par**:
 
